# traffic-visualisation

./: .gitignore  LICENSE  README.md  docker-compose.yaml
api-consumer/: main.py  pyproject.toml
api-producer/: Dockerfile  main.py  pyproject.toml
frontend/: Dockerfile  index.html  index_check.html  package.json  scripts.js  styles.css
